change C class color (again)

--- a/styles.css
+++ b/styles.css
@@ -16,7 +16,7 @@
   /* ranking border colors */
   --a-rank: #ff86b9;
   --b-rank: #ffd638;
-  --c-rank: #00b5c7;
+  --c-rank: #1cc3ca;
   --f-rank: #a6a6a4;
   --no-rank: #949494;
 }
