change banner color

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 /* define constants up here */
 :root {
-  --banner-bg-start: #1cc3ca;
+  --banner-bg-start: #e8cba9;
   --banner-bg-end: #00b5c7;
   --produce-gray: #e0e0e0;
   --search-text-gray: #949494;
