--- a/styles.css
+++ b/styles.css
@@ -51,12 +51,12 @@ body {
   margin-bottom: 15px;
 }
 #banner-title {
-  font-family: 'Roboto Condensed', sans-serif;
-  font-size: 16px;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 24px;
 }
 #banner-subtitle {
-  font-family: 'Roboto Condensed', sans-serif;
-  font-size: 12px;
+  font-family: 'Montserrat', sans-serif;
+  font-size: 16px;
 }
 
 /* Styles for table */
