change ranking title font

--- a/styles.css
+++ b/styles.css
@@ -276,7 +276,7 @@ body {
 }
 #ranking__title {
   text-align: center;
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Monsterrat', sans-serif;
 }
 .ranking__row {
   display: flex;
