--- a/styles.css
+++ b/styles.css
@@ -120,7 +120,7 @@ body {
   color: white;
 }
 #getlink-button:active { /* these styles are active while get link is being pressed */
-  background-color: #ff2475;
+  background-color: #e8cba9;
 }
 #getlink-textbox {
   margin-left: 5px;
