change checked color

--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
   --ranking-affil-gray: #949494;
   --save-box-gray: #949494;
 
-  --checked-blue: #6cb0ffe0;
+  --checked-blue: #e8cba9;
 
   /* ranking border colors */
   --a-rank: #ff86b9;
