--- a/styles.css
+++ b/styles.css
@@ -1,7 +1,7 @@
 /* define constants up here */
 :root {
-  --banner-bg-start: #e8cba9;
-  --banner-bg-end: #eabbb5;
+  --banner-bg-start: #b39ad1;
+  --banner-bg-end: #6e3cab;
   --produce-gray: #e0e0e0;
   --search-text-gray: #949494;
   --search-gray: #f0f0f0;
