--- a/styles.css
+++ b/styles.css
@@ -11,7 +11,7 @@
   --ranking-affil-gray: #949494;
   --save-box-gray: #949494;
 
-  --checked-blue: #e8cba9;
+  --checked-blue: #7b458f;
 
   /* ranking border colors */
   --ac-rank: #B03E56;
